# tfg

./: .gitignore  CMakeLists.txt  LICENSE  visualize.nb  visualize_phis.nb
Eigen/: Geometry
Eigen/src/Core/: Matrix.h  MatrixBase.h  VectorwiseOp.h
Eigen/src/Core/util/: ForwardDeclarations.h
Eigen/src/OrderingMethods/: Amd.h
src/: Geometry.cpp  Geometry.h  Main.cpp  PanelMethod.cpp  PanelMethod.h  PlanarGeometry.cpp  PlanarGeometry.h  SheetGeometry.cpp  SheetGeometry.h  ThinWing.cpp  ThinWing.h  Util.h  Wake.cpp  Wake.h
src/cases/: SteadyRectangle.cpp  Theodorsen.cpp  Wagner.cpp  WakeGeneration.cpp  clAlpha.cpp
verify/: clalpha.nb  grads.nb  oscillation_theodorsen.nb  rectangle.jl  rectangle.nb  rectangle_comapre.nb  theodorsenGeometry.nb  verify_flatplate.nb  wagner.nb  wake_generation.nb
